--- a/build.yaml
+++ b/build.yaml
@@ -40,3 +40,14 @@ artifacts:
   arez_browser_extras: org.realityforge.arez:arez-browser-extras:jar:gwt:0.31
 
   braincheck: org.realityforge.braincheck:braincheck:jar:gwt:1.3.0
+
+  dagger_core: com.google.dagger:dagger:jar:2.13
+  dagger_producers: com.google.dagger:dagger-producers:jar:2.13
+  dagger_compiler: com.google.dagger:dagger-compiler:jar:2.13
+  googlejavaformat: com.google.googlejavaformat:google-java-format:jar:1.4
+  errorprone: com.google.errorprone:javac-shaded:jar:9-dev-r4023-3
+  javapoet: com.squareup:javapoet:jar:1.8.0
+  guava: com.google.guava:guava:jar:21.0
+
+  javax_inject: javax.inject:javax.inject:jar:1
+  javax_inject_sources: javax.inject:javax.inject:jar:sources:1
