--- a/build.yaml
+++ b/build.yaml
@@ -49,5 +49,8 @@ artifacts:
   javapoet: com.squareup:javapoet:jar:1.8.0
   guava: com.google.guava:guava:jar:21.0
 
+  dagger_core_sources: com.google.dagger:dagger:jar:sources:2.13
+  dagger_gwt: com.google.dagger:dagger-gwt:jar:sources:2.13
+
   javax_inject: javax.inject:javax.inject:jar:1
   javax_inject_sources: javax.inject:javax.inject:jar:sources:1
