--- a/build.yaml
+++ b/build.yaml
@@ -19,13 +19,12 @@ artifacts:
   jsinterop_annotations: com.google.jsinterop:jsinterop-annotations:jar:1.0.2
   jsinterop_annotations_sources: com.google.jsinterop:jsinterop-annotations:jar:sources:1.0.2
 
-  jsinterop_base: com.google.jsinterop:base:jar:1.0.0-beta-3
-  jsinterop_base_sources: com.google.jsinterop:base:jar:sources:1.0.0-beta-3
+  jsinterop_base: com.google.jsinterop:base:jar:1.0.0-RC1
+  jsinterop_base_sources: com.google.jsinterop:base:jar:sources:1.0.0-RC1
 
-  elemental2_core: com.google.elemental2:elemental2-core:jar:1.0.0-beta-3
-  elemental2_dom: com.google.elemental2:elemental2-dom:jar:1.0.0-beta-3
-  elemental2_promise: com.google.elemental2:elemental2-promise:jar:1.0.0-beta-3
-
+  elemental2_core: com.google.elemental2:elemental2-core:jar:1.0.0-RC1
+  elemental2_dom: com.google.elemental2:elemental2-dom:jar:1.0.0-RC1
+  elemental2_promise: com.google.elemental2:elemental2-promise:jar:1.0.0-RC1
 
   react4j_annotation: org.realityforge.react4j:react4j-annotations:jar:0.28
   react4j_core: org.realityforge.react4j:react4j-core:jar:0.28
