--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
 - rvm use 2.3.1
 - gem install bundler
 - bundle install
-script: buildr package site:deploy
+script: buildr package publish_if_tagged
 git:
   depth: 10
