--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <gwt.version>2.8.2</gwt.version>
     <gwt-maven-plugin.version>1.0-rc-9</gwt-maven-plugin.version>
     <react4j.version>0.53</react4j.version>
+    <arez.version>0.71</arez.version>
   </properties>
 
   <dependencies>
@@ -26,6 +27,22 @@
       <groupId>org.realityforge.react4j</groupId>
       <artifactId>react4j-arez</artifactId>
       <version>${react4j.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.realityforge.arez</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.realityforge.arez</groupId>
+      <artifactId>arez-component</artifactId>
+      <version>${arez.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.realityforge.arez</groupId>
+      <artifactId>arez-browser-extras</artifactId>
+      <version>${arez.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
@@ -85,6 +102,11 @@
               <groupId>org.realityforge.react4j</groupId>
               <artifactId>react4j-processor</artifactId>
               <version>${react4j.version}</version>
+            </path>
+            <path>
+              <groupId>org.realityforge.arez</groupId>
+              <artifactId>arez-processor</artifactId>
+              <version>${arez.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
