--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <gwt-maven-plugin.version>1.0-rc-9</gwt-maven-plugin.version>
     <react4j.version>0.53</react4j.version>
     <arez.version>0.71</arez.version>
+    <dagger.version>2.13</dagger.version>
   </properties>
 
   <dependencies>
@@ -43,6 +44,11 @@
       <groupId>org.realityforge.arez</groupId>
       <artifactId>arez-browser-extras</artifactId>
       <version>${arez.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.dagger</groupId>
+      <artifactId>dagger-gwt</artifactId>
+      <version>${dagger.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
@@ -107,6 +113,11 @@
               <groupId>org.realityforge.arez</groupId>
               <artifactId>arez-processor</artifactId>
               <version>${arez.version}</version>
+            </path>
+            <path>
+              <groupId>com.google.dagger</groupId>
+              <artifactId>dagger-compiler</artifactId>
+              <version>${dagger.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
