--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
     <react4j.version>0.53</react4j.version>
   </properties>
 
+  <repositories>
+    <repository>
+      <!-- Repository where releases are staged during release process -->
+      <id>staging-repository</id>
+      <url>https://stocksoftware.jfrog.io/stocksoftware/staging</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.realityforge.react4j</groupId>
