--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <gwt-maven-plugin.version>1.0-rc-9</gwt-maven-plugin.version>
     <react4j.version>0.61</react4j.version>
     <arez.version>0.75</arez.version>
+    <arez-browserlocation.version>0.01</arez-browserlocation.version>
     <dagger.version>2.13</dagger.version>
   </properties>
 
@@ -52,6 +53,11 @@
       <groupId>org.realityforge.arez</groupId>
       <artifactId>arez-browser-extras</artifactId>
       <version>${arez.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.realityforge.arez.browserlocation</groupId>
+      <artifactId>arez-browserlocation</artifactId>
+      <version>${arez-browserlocation.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.dagger</groupId>
