Remove incorrect classifier

--- a/build.yaml
+++ b/build.yaml
@@ -32,4 +32,4 @@ artifacts:
   react4j_dom: org.realityforge.react4j:react4j-dom:jar:0.69
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.69
 
-  braincheck: org.realityforge.braincheck:braincheck:jar:gwt:1.6.0
+  braincheck: org.realityforge.braincheck:braincheck:jar:1.6.0
