Make sure jsinterop entrypoint is added to compile

--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,8 @@
                 <argument>-jsZipCache</argument>
                 <argument>jsZipCache</argument>
                 <argument>-entrypoint</argument>
+                <argument>jsinterop</argument>
+                <argument>-entrypoint</argument>
                 <argument>react4j.todomvc.App</argument>
               </arguments>
             </configuration>
