--- a/build.yaml
+++ b/build.yaml
@@ -8,7 +8,7 @@ repositories:
 artifacts:
   idea_codestyle: au.com.stocksoftware.idea.codestyle:idea-codestyle:xml:1.13
 
-  javax_jsr305: com.google.code.findbugs:jsr305:jar:3.0.1
+  javax_annotation: org.realityforge.javax.annotation:javax.annotation:jar:1.0.0
   jetbrains_annotations: org.jetbrains:annotations:jar:15.0
 
   # GWT deps
