--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,11 @@
                 <argument>
                   ${project.build.directory}/dependency/bootstrap.js.zip:${project.build.directory}/dependency/jre.js.zip
                 </argument>
+                <argument>--compilation_level=ADVANCED</argument>
+                <argument>--externs</argument>
+                <argument>${project.basedir}/src/main/externs/react.externs.js</argument>
+                <argument>--externs</argument>
+                <argument>${project.basedir}/src/main/externs/react-dom.externs.js</argument>
                 <argument>-out</argument>
                 <argument>out</argument>
                 <argument>-src</argument>
