Exclude the GWT2.x variant of jsinterop base

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
       <groupId>org.realityforge.arez.spytools</groupId>
       <artifactId>arez-spytools</artifactId>
       <version>${arez-spytools.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.jsinterop</groupId>
+          <artifactId>base</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.realityforge.arez.browserlocation</groupId>
