--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <gwt.version>2.8.2</gwt.version>
     <gwt-maven-plugin.version>1.0-rc-9</gwt-maven-plugin.version>
     <react4j.version>0.81</react4j.version>
-    <arez.version>0.95</arez.version>
+    <arez.version>0.96</arez.version>
     <arez-browserlocation.version>0.21</arez-browserlocation.version>
     <arez-spytools.version>0.16</arez-spytools.version>
   </properties>
@@ -51,7 +51,7 @@
     </dependency>
     <dependency>
       <groupId>org.realityforge.arez</groupId>
-      <artifactId>arez-component</artifactId>
+      <artifactId>arez-core</artifactId>
       <version>${arez.version}</version>
     </dependency>
     <dependency>
