--- a/build.yaml
+++ b/build.yaml
@@ -26,6 +26,7 @@ artifacts:
   react4j_core: org.realityforge.react4j:react4j-core:jar:0.82
   react4j_dom: org.realityforge.react4j:react4j-dom:jar:0.82
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.82
+  react4j_arez: org.realityforge.react4j:react4j-arez:jar:0.82
 
   arez_core: org.realityforge.arez:arez-core:jar:0.96
   arez_processor: org.realityforge.arez:arez-processor:jar:0.96
