--- a/build.yaml
+++ b/build.yaml
@@ -9,7 +9,7 @@ artifacts:
   idea_codestyle: au.com.stocksoftware.idea.codestyle:idea-codestyle:xml:1.13
 
   javax_annotation: org.realityforge.javax.annotation:javax.annotation:jar:1.0.0
-  jetbrains_annotations: org.jetbrains:annotations:jar:15.0
+  jetbrains_annotations: org.realityforge.org.jetbrains.annotations:org.jetbrains.annotations:jar:1.0.0
 
   # GWT deps
   gwt_user: com.google.gwt:gwt-user:jar:2.8.2
