--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,7 @@
                 <argument>--define=jre.checks.checkLevel=MINIMAL</argument>
                 <argument>--define=jre.classMetadata=STRIPPED</argument>
                 <argument>--define=goog.DEBUG=false</argument>
+                <argument>--define=arez.purge_reactions_when_runaway_detected=false</argument>
                 <argument>-out</argument>
                 <argument>out</argument>
                 <argument>-src</argument>
