--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <groupId>com.vertispan.jsinterop</groupId>
       <artifactId>base</artifactId>
       <version>1.0.0-20181005.191514-8</version>
-      <!-- Google made an incompatible  so we locked down version until next release -->
+      <!-- Google made an incompatible change so we locked down version until next release -->
       <!--<version>1.0.0-SNAPSHOT</version>-->
     </dependency>
   </dependencies>
