--- a/build.yaml
+++ b/build.yaml
@@ -44,7 +44,7 @@ artifacts:
   guava: com.google.guava:guava:jar:23.3-jre
 
   dagger_core_sources: com.google.dagger:dagger:jar:sources:2.15
-  dagger_gwt: com.google.dagger:dagger-gwt:jar:sources:2.15
+  dagger_gwt: org.realityforge.dagger:dagger-gwt-lite:jar:sources:1.0.0
 
   javax_inject: javax.inject:javax.inject:jar:1
   javax_inject_sources: javax.inject:javax.inject:jar:sources:1
