--- a/build.yaml
+++ b/build.yaml
@@ -43,8 +43,7 @@ artifacts:
   javapoet: com.squareup:javapoet:jar:1.11.1
   guava: com.google.guava:guava:jar:25.0-jre
 
-  dagger_core_sources: com.google.dagger:dagger:jar:sources:2.15
-  dagger_gwt: org.realityforge.dagger:dagger-gwt-lite:jar:sources:1.0.2
+  dagger_gwt: org.realityforge.dagger:dagger-gwt-lite:jar:2.19-rf1
 
   javax_inject: javax.inject:javax.inject:jar:1
   javax_inject_sources: javax.inject:javax.inject:jar:sources:1
