--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <react4j.version>0.113</react4j.version>
+    <arez.version>0.124</arez.version>
   </properties>
 
   <repositories>
@@ -39,6 +40,17 @@
       <groupId>org.realityforge.react4j</groupId>
       <artifactId>react4j-dom</artifactId>
       <version>${react4j.version}</version>
+       <exclusions>
+        <exclusion>
+          <groupId>org.realityforge.arez</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.realityforge.arez</groupId>
+      <artifactId>arez-core</artifactId>
+      <version>${arez.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
