--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: ruby
 jdk:
 - oraclejdk8
-install:
-- wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/0.19.0/bazel-0.19.0-installer-linux-x86_64.sh"
-- chmod +x install.sh
-- ./install.sh --user
-- rm -f install.sh
+env:
+  - BAZEL=0.22.0
+
+before_install:
+  - |
+    if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
+      OS=darwin
+    else
+      sysctl kernel.unprivileged_userns_clone=1
+      OS=linux
+    fi
+    wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL}/bazel-${BAZEL}-installer-${OS}-x86_64.sh"
+    chmod +x install.sh
+    ./install.sh --user
+    rm -f install.sh
 script: bazel build :react4j-todomvc
 git:
   depth: false
