--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,15 @@ before_install:
     chmod +x install.sh
     ./install.sh --user
     rm -f install.sh
+
+before_script:
+  - echo "startup --output_base=$HOME/.cache/bazel" >> .bazelrc
+  # Avoid progress indicators that can blow out log which makes using WEB UI difficult
+  - echo "common --noshow_progress" >> .bazelrc
+  - echo "common --noshow_loading_progress" >> .bazelrc
+  # This is so we understand failures better
+  - echo "build --verbose_failures" >> .bazelrc
+
 script: bazel build :react4j-todomvc
 git:
   depth: false
