--- a/build.yaml
+++ b/build.yaml
@@ -32,3 +32,5 @@ artifacts:
   arez_spytools: org.realityforge.arez.spytools:arez-spytools:jar:0.56
 
   braincheck: org.realityforge.braincheck:braincheck:jar:1.13.0
+
+  spritz_core: org.realityforge.spritz:spritz-core:jar:0.03
