--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,28 @@
+
 language: ruby
 jdk:
 - oraclejdk8
-rvm:
-- 2.3.1
+env:
+- BAZEL=0.23.0
 before_install:
-- openssl aes-256-cbc -K $encrypted_47150f95ffd7_key -iv $encrypted_47150f95ffd7_iv
-  -in etc/secrets -out ../secrets.tar -d
-- "(cd ../ && tar xvf secrets.tar)"
-- chmod 600 ../deploy
-- eval `ssh-agent -s` && ssh-add ../deploy
-install:
-- rvm use 2.3.1
-- gem install bundler
-- bundle install
-script: buildr package site:deploy_if_candidate_branch
+- |
+  if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
+    OS=darwin
+  else
+    sysctl kernel.unprivileged_userns_clone=1
+    OS=linux
+  fi
+  wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL}/bazel-${BAZEL}-installer-${OS}-x86_64.sh"
+  chmod +x install.sh
+  ./install.sh --user
+  rm -f install.sh
+before_script:
+- echo "startup --output_base=$HOME/.cache/bazel" >> .bazelrc
+# Avoid progress indicators that can blow out log which makes using WEB UI difficult
+- echo "common --noshow_progress" >> .bazelrc
+- echo "common --noshow_loading_progress" >> .bazelrc
+# This is so we understand failures better
+- echo "build --verbose_failures" >> .bazelrc
+script: bazel build :all
 git:
   depth: false
