--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -36,7 +36,8 @@ j2cl_library(
 
 j2cl_library(
     name = "jsinterop_base-j2cl",
-    srcs = ["//thirdparty:jsinterop_base"],
+    # TODO: The glob should be removed and the source be part of binary artifact
+    srcs = ["//thirdparty:jsinterop_base"] + glob(["src/main/java/jsinterop/base/*.js"]),
     deps = [
         ":gwt-javaemul-internal-annotations-j2cl",
         ":jsinterop_annotations-j2cl",
