Manually add react4j externs

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -91,7 +91,8 @@ j2cl_library(
 
 j2cl_library(
     name = "react4j_core-j2cl",
-    srcs = ["//thirdparty:react4j_core"],
+    # TODO: The glob should be removed and the source be part of binary artifact
+    srcs = ["//thirdparty:react4j_core"] + glob(["src/main/java/react4j/*.js"]),
     deps = [
         ":arez_core-j2cl",
         ":braincheck-j2cl",
