--- a/build_defs/dependencies.yaml
+++ b/build_defs/dependencies.yaml
@@ -1,5 +1,6 @@
 options:
   aliasStrategy: ArtifactId
+  supportDependencyOmit: true
   workspaceDirectory: ..
   extensionFile: build_defs/dependencies.bzl
   exportDeps: true
