--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
     sysctl kernel.unprivileged_userns_clone=1
     OS=linux
   fi
-  BAZEL=$(cat ".bazelversion")
-  wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL}/bazel-${BAZEL}-installer-${OS}-x86_64.sh"
+  BAZEL_VERSION=$(cat ".bazelversion")
+  wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-${OS}-x86_64.sh"
   chmod +x install.sh
   ./install.sh --user
   rm -f install.sh
