--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -17,6 +17,7 @@ artifacts:
 
   # The following dependencies are referenced in build so need to be here
   - coord: org.realityforge.javax.annotation:javax.annotation
+    natures: [Java, J2cl]
   - coord: com.google.jsinterop:jsinterop-annotations
   - coord: org.realityforge.com.google.elemental2:elemental2-dom
   - coord: org.realityforge.com.google.elemental2:elemental2-promise
