Disable config sha validation

--- a/build_defs/dependencies.yaml
+++ b/build_defs/dependencies.yaml
@@ -1,6 +1,7 @@
 options:
   aliasStrategy: ArtifactId
   supportDependencyOmit: true
+  verifyConfigSha256: false
   workspaceDirectory: ..
   extensionFile: build_defs/dependencies.bzl
   exportDeps: true
