--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,6 +10,8 @@ _RESOURCES = glob(["src/main/java/**/*"], exclude = ["**/*.java"])
 j2cl_import(
     name = "jsinterop_annotations-j2cl",
     jar = "@com_google_jsinterop_annotations_head//jar",
+    # This visibility is needed to support replacements by depgen
+    visibility = ["//thirdparty:__pkg__"],
 )
 
 j2cl_import(
@@ -76,26 +78,13 @@ j2cl_library(
 )
 
 j2cl_library(
-    name = "braincheck-j2cl",
-    srcs = ["//thirdparty:braincheck"],
-    deps = [
-        "//thirdparty:javax_annotation-j2cl",
-        ":gwt-javaemul-internal-annotations-j2cl",
-        ":jsinterop_annotations-j2cl",
-        ":jsinterop_base-j2cl",
-    ],
-    # TODO: This is required until braincheck upgrades to version that links against jsinterop-base to invoke Js.debugger()
-    js_suppress = ["checkDebuggerStatement"],
-)
-
-j2cl_library(
     name = "react4j_core-j2cl",
     srcs = ["//thirdparty:react4j_core"],
     # TODO: The glob should be removed and the source be part of binary artifact
     native_srcs = glob(["src/main/java/react4j/*.js"]),
     deps = [
         ":arez_core-j2cl",
-        ":braincheck-j2cl",
+        "//thirdparty:braincheck-j2cl",
         ":elemental2_core-j2cl",
         ":elemental2_promise-j2cl",
         ":gwt-javaemul-internal-annotations-j2cl",
@@ -109,7 +98,7 @@ j2cl_library(
     name = "react4j_dom-j2cl",
     srcs = ["//thirdparty:react4j_dom"],
     deps = [
-        ":braincheck-j2cl",
+        "//thirdparty:braincheck-j2cl",
         ":elemental2_core-j2cl",
         ":elemental2_dom-j2cl",
         ":elemental2_promise-j2cl",
