Add grim dependency from arez

--- a/build.yaml
+++ b/build.yaml
@@ -32,3 +32,5 @@ artifacts:
   arez_spytools: org.realityforge.arez.spytools:arez-spytools:jar:0.56
 
   braincheck: org.realityforge.braincheck:braincheck:jar:1.24.0
+
+  grim_annotations: org.realityforge.grim:grim-annotations:jar:0.01
