--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
       <exclusions>
         <exclusion>
           <groupId>com.google.jsinterop</groupId>
-          <artifactId>base</artifactId>
+          <artifactId>*</artifactId>
         </exclusion>
         <exclusion>
           <groupId>org.realityforge.arez</groupId>
@@ -89,6 +89,12 @@
       <groupId>org.realityforge.arez</groupId>
       <artifactId>arez-core</artifactId>
       <version>${arez.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.jsinterop</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.vertispan.jsinterop</groupId>
